# rust-axum-sqlx

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20230921074749_init.up.sql
src/: handler.rs  health.rs  main.rs  model.rs  router.rs  schema.rs
