[package]
name = "axum-002"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1